--- a/paginasweb/indexDHT11.html
+++ b/paginasweb/indexDHT11.html
@@ -64,15 +64,15 @@
 
       client.on("connect", () => {
         console.log("HTML conectado al broker MQTT");
-        client.subscribe(["dht11/temperature", "dht11/humidity"]);
+        client.subscribe(["sensor/dht11/temperatura", "sensor/dht11/humedad"]);
       });
 
       client.on("message", (topic, message) => {
         const value = message.toString();
         console.log(`Mensaje recibido en el topic ${topic}: ${value}`);
-        if (topic === "dht11/temperature") {
+        if (topic === "sensor/dht11/temperatura") {
           document.getElementById("temperatura").innerText = value + " °C";
-        } else if (topic === "dht11/humidity") {
+        } else if (topic === "sensor/dht11/humedad") {
           document.getElementById("humedad").innerText = value + " %";
         }
       });
